fix layout issues in FF (and likely IE), fix #283
- row/column layouts use CSS floats instead of table layouts, which
  Firefox doesn't like (position: relative isn't respected in display:
  table-*, apparently)
- made TripPlanner more flexible WRT frozen destinations
- updated TripPlanner.inject() to respect ?to={destination} and set
  TripPlanner's "freezeDestination" option accordingly
- fixed layout to match #283

--- a/www/css/ggnpc-planner.css
+++ b/www/css/ggnpc-planner.css
@@ -259,7 +259,7 @@
   margin-left: 0;
 }
 
-.trip-planner span.destination.frozen {
+.trip-planner .frozen-title {
   font-size: 18px;
   font-weight: bold;
   margin-right: 10px;
@@ -406,6 +406,11 @@
   border: none;
   border-radius: 4px;
   padding: 14px 30px;
+}
+
+.trip-planner .destination .description {
+  margin: 10px 0 0 0;
+  margin-left: 32px; /* width of the pin image + margin */
 }
 
 .trip-planner.frozen .destination.has-welcome .section {
